# amalgam

./: .gitignore  .gitmodules  Cargo.toml  build.rs
.cargo/: config.toml
android/: Cargo.toml
android/src/: lib.rs
benches/: allocator.rs
shaders/: Cargo.toml  build.rs
shaders/common/: Cargo.toml
shaders/common/src/: lib.rs  material.rs
shaders/fragment/: Cargo.toml
shaders/fragment/src/: lib.rs
shaders/src/: lib.rs
shaders/vertex/: Cargo.toml
shaders/vertex/src/: lib.rs
src/: application.rs  both.rs  lib.rs  main.rs  notes  pipeline_presets.rs  prelude.rs
src/engine/: app.rs  cache_storage.proto  caches.rs  camera.rs  delta.rs  engine.rs  fps.rs  gui_renderer.rs  mod.rs  pipelines.rs  vbo.rs
src/engine/buffers/: mod.rs  ubo.rs  vbo.rs  virtual_buffer.rs
src/engine/shapes/: AABB.rs  mod.rs  ray.rs  renderable.rs  utils.rs
src/engine/shapes/declarations/: fast_declaration.rs  intersection.rs  mod.rs  safe_declaration.rs
src/engine/utils/: gui.rs  mod.rs  obj_n_size.rs
src/shaders/: graphic.frag  graphic.vert
src/vulkan/: func.rs  mod.rs  utils.rs
src/vulkan/features/: mod.rs
src/vulkan/features/gpu_memory/: arena_alloc.rs  mod.rs  pool_alloc.rs
src/vulkan/gltf/: gltf_struct.rs  mod.rs  scene.rs  ubo.rs  utils.rs
src/vulkan/gltf/impl/: builder.rs  mod.rs  render.rs
src/vulkan/impl/: buffer.rs  command_buffer.rs  descriptors.rs  device.rs  extensions.rs  image.rs  instance.rs  memory.rs  mod.rs  pipelines.rs  queues.rs  renderpass.rs  sampler.rs  shaders.rs  surface.rs  swapchain.rs  sync.rs
src/vulkan/platform/: all.rs  android.rs  linux.rs  mod.rs  windows.rs
