[package]
name = "amalgam"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib"]

[workspace]
resolver = "3"
members = [".", "vulkan_raw", "shaders/fragment", "shaders/vertex" , "shaders/common"]

[workspace.package]
version = "0.1.1"
authors = ["StreamVersus"]
description = "A rust-written vulkan game engine"
edition = "2024"

[workspace.dependencies]
vulkan_raw = { path = "vulkan_raw" }
fragment = { path = "shaders/fragment"}
vertex = { path = "shaders/vertex"}
common = { path = "shaders/common" }

[dependencies]
winit = "0.30"
prost = "0.14.3"
lz4_flex = "0.12"
ultraviolet = { version = "0.10", features = ["bytemuck"]}
sonic-rs = "0.5"
serde = "1.0"
bytemuck = "1.23"
rand = "0.9.2"
smallvec = "1.15.1"
vulkan_raw = { workspace = true }
fragment = { workspace = true }
vertex = { workspace = true }
common = { workspace = true }
png = { version = "0.18.0", features = ["zlib-rs"] }
cfg-if = "1.0.4"

[build-dependencies]
prost-build = "0.14"
spirv-builder = { git = "https://github.com/Rust-GPU/rust-gpu", default-features = false, features = ["use-installed-tools"] }

[target.'cfg(target_os = "android")'.dependencies]
winit = { version = "0.30", features = ["android-native-activity"] }
android-activity = { version = "0.6", features = ["native-activity"] }
