cargo-features = ["profile-rustflags"]
[package]
name = "amalgam"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[workspace]
resolver = "3"
members = [".", "vulkan_raw", "shaders/fragment", "shaders/vertex" , "shaders/common"]
exclude = ["android"]

[workspace.package]
version = "0.1.1"
authors = ["StreamVersus"]
description = "A rust-written vulkan game engine"
edition = "2024"

[workspace.dependencies]
vulkan_raw = { path = "vulkan_raw" }
fragment = { path = "shaders/fragment" }
vertex = { path = "shaders/vertex" }
common = { path = "shaders/common" }

[dependencies]
prost = "0.14.3"
lz4_flex = "0.13"
ultraviolet = { version = "0.10", features = ["bytemuck", "serde"]}
sonic-rs = "0.5"
serde = "1.0"
bytemuck = "1.23"
rand = "0.10.0"
smallvec = { version = "1.15.1", features = ["const_generics", "const_new", "serde"] }
vulkan_raw = { workspace = true }
fragment = { workspace = true }
vertex = { workspace = true }
common = { workspace = true }
png = { version = "0.18.1", features = ["zlib-rs"] }
cfg-if = "1.0.4"
winit = "0.31.0-beta.2"
egui = "0.33.3"

[build-dependencies]
prost-build = "0.14"
spirv-builder = { git = "https://github.com/Rust-GPU/rust-gpu", default-features = false, features = ["use-installed-tools"] }

[target.'cfg(target_os = "android")'.dependencies]
winit = { version = "0.31.0-beta.2", features = ["android-native-activity"] }
android-activity = { version = "0.6.0", features = ["native-activity"] }

[features]
#default = ["pool_alloc"]
default = ["wayland"]
wayland = [
    "winit/wayland",
]
x11 = [
    "winit/x11",
]
pool_alloc = []

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "allocator"
harness = false
