cargo-features = ["profile-rustflags"]
[package]
name = "amalgam"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]
resolver = "3"
members = [".", "vulkan_raw", "shaders/fragment", "shaders/vertex" , "shaders/common"]

[workspace.package]
version = "0.1.1"
authors = ["StreamVersus"]
description = "A rust-written vulkan game engine"
edition = "2024"

[workspace.dependencies]
vulkan_raw = { path = "vulkan_raw" }
fragment = { path = "shaders/fragment" }
vertex = { path = "shaders/vertex" }
common = { path = "shaders/common" }
spirv-std = { git = "https://github.com/Rust-GPU/rust-gpu", rev = "66b7eb3922f042becb223cfa83f088e7be42d608" }
spirv-builder = { git = "https://github.com/Rust-GPU/rust-gpu", rev = "66b7eb3922f042becb223cfa83f088e7be42d608", default-features = false, features = ["use-installed-tools"] }

[dependencies]
prost = "0.14.3"
lz4_flex = "0.13"
ultraviolet = { version = "0.10", features = ["bytemuck", "serde"]}
sonic-rs = "0.5"
serde = "1.0"
bytemuck = "1.23"
rand = "0.10.0"
smallvec = { version = "1.15.1", features = ["const_generics", "const_new", "serde"] }
vulkan_raw = { workspace = true }
fragment = { workspace = true }
vertex = { workspace = true }
common = { workspace = true }
png = { version = "0.18.1", features = ["zlib-rs"] }
cfg-if = "1.0.4"
winit = "0.31.0-beta.2"
egui = "0.34.2"
android-activity = { version = "0.6.0", features = ["native-activity"], optional = true }

[build-dependencies]
prost-build = "0.14"
spirv-builder = { workspace = true }

[features]
default = ["wayland", "pool_alloc"]
wayland = [
    "winit/wayland",
]
x11 = [
    "winit/x11",
]
android = ["winit/android-native-activity", "android-activity"]
pool_alloc = ["vulkan_raw/VulkanMemoryAllocator"]

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "allocator"
harness = false