cargo-features = ["profile-rustflags"]
[package]
name = "android"
version = "0.1.0"
edition = "2024"

[workspace]

[lib]
name = "stub"
crate-type = ["cdylib"]

[dependencies]
amalgam = { path = ".." }

[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.6.0", features = ["native-activity"] }

[package.metadata.android]
package = "com.stream.amalgam"
build_targets = ["aarch64-linux-android"]
label = "Application Name"
strip = "default"
apk_name = "amalgam"

[package.metadata.android.sdk]
min_sdk_version = 29
target_sdk_version = 35

[[package.metadata.android.uses_feature]]
name = "android.hardware.vulkan.level"
required = true
version = 1

[package.metadata.android.application.activity]