[package]
name = "shaders"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fragment = { path = "fragment" }
vertex = { path = "vertex" }

[build-dependencies]
spirv-builder = { git = "https://github.com/Rust-GPU/rust-gpu" }

# Compile build-dependencies in release mode with
# the same settings as regular dependencies.
[profile.release.build-override]
opt-level = 2
codegen-units = 16
strip = true

[profile.dev.build-override]
opt-level = 2
strip = true
